| Summary: | ASTERISK-17639: [patch] SIPAddHeader should modify REFER message originated by Transfer application | ||
| Reporter: | Kirill Katsnelson (kkm) | Labels: | |
| Date Opened: | 2011-04-03 21:14:58 | Date Closed: | 2012-07-31 17:29:21 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_sip/NewFeature |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ( 0) 019059-sip-refer-addheaders-1.10.diff ( 1) 019059-sip-refer-addheaders-1.8.diff ( 2) 019059-sip-refer-addheaders-1.8-353549.diff ( 3) 019059-sip-refer-addheaders-trunk-353549.diff | |
| Description: | There is currently no way to augment a REFER message from Transfer with extra headers. The attached patch implements the feature. ****** ADDITIONAL INFORMATION ****** The feature is enabled by default, with a new sip.conf setting to disable it. The rationale for it to be on by default is that it is in fact very controllable from the dialplan: It takes one application call to SIPRemoveHeader with no argument to remove all previously accumulated additional SIP headers. Since Transfer normally terminates the channel, there is no need in practice to keep any SIP headers beyond it in the channel, so that removing these does not impose any dialplan programming complexity. | ||
| Comments: | By: Leif Madsen (lmadsen) 2011-04-05 16:30:56 Make sure your patches also modify the UPGRADE.txt and CHANGES files. By: Kirill Katsnelson (kkm) 2011-04-06 01:52:29 @lmadsen: thanks, good point. I have modified CHANGES in the diff up on the review board, but totally forgot about UPGRADE.txt! By: Maciej Krajewski (jamicque) 2012-01-25 15:45:11.894-0600 while patching against newest 1.8.8.2 release I have this error: patching file channels/chan_sip.c Hunk #1 succeeded at 748 with fuzz 1 (offset 8 lines). Hunk #2 succeeded at 11820 (offset 464 lines). Hunk #3 succeeded at 11866 (offset 464 lines). Hunk #4 succeeded at 13000 (offset 496 lines). Hunk #5 succeeded at 13045 (offset 490 lines). Hunk #6 FAILED at 27139. Hunk #7 succeeded at 28081 (offset 932 lines). 1 out of 7 hunks FAILED -- saving rejects to file channels/chan_sip.c.rej patching file channels/sip/include/sip.h Hunk #1 succeeded at 874 (offset 14 lines). By: Maciej Krajewski (jamicque) 2012-01-28 16:55:24.181-0600 It will also be nice if SIP_HEADER function would read the REFFER SIP headers. By: Kirill Katsnelson (kkm) 2012-01-31 20:24:52.821-0600 Refreshed patches against branches/1.8 and trunk. The old attached patches do not apply cleanly any more. By: Maciej Krajewski (jamicque) 2012-02-01 02:08:56.983-0600 Every think works fine thanks! As I've mentioned before a patch that would read recieved REFER headers would be nice. By: Eelco Brolman (eelcob) 2013-03-26 11:27:15.601-0500 This issue is marked as Closed, Fixed, but the code has not found it's way to the asterisk 1.8 release. Is that on purpose, or just forgotten? By: David Woolley (davidw) 2013-03-27 06:43:51.269-0500 It's a new feature, not a bug fix. New features are only applied to the trunk version. | ||